--- a/src/components/MangaCard/style.css
+++ b/src/components/MangaCard/style.css
@@ -6,6 +6,7 @@
   user-select: none;
   border-radius: 4px;
   border: 1px solid rgba(255, 255, 255, 0.09);
+  position: relative;
 }
 
 .manga-link {
@@ -49,6 +50,7 @@
   box-sizing: border-box;
   margin-bottom: 16px;
   position: relative;
+  text-align: left;
 }
 
 .manga-list > div {
@@ -143,4 +145,20 @@
   display: flex;
   flex-direction: column;
   border: 1px solid rgba(255, 255, 255, 0.09);
+}
+
+.MuiIconButton-root.manga-button {
+  z-index: 4;
+  position: absolute;
+  top: 4px;
+  right: 4px;
+}
+
+.MuiIconButton-root.manga-button.backgrownd {
+  background-color: rgba(0, 0, 0, 0.3);
+  transition: all 0.3s ease;
+}
+
+.MuiIconButton-root.manga-button.backgrownd:hover {
+  background-color: rgba(0, 0, 0, 0.7);
 }
